<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="@dimen/cardDialogCornerRadius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_header_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_add_workout"
                    app:tint="@color/text_color" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginOrPadding16dp"
                android:layout_marginTop="@dimen/marginOrPadding16dp"
                android:text="@string/add_workout"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_bottom_sheet"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_header_dialog" />

            <TextView
                android:id="@+id/tv_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginOrPadding16dp"
                android:layout_marginTop="@dimen/marginOrPadding16dp"
                android:layout_marginEnd="@dimen/marginOrPadding16dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_dialog" />

            <EditText
                android:id="@+id/et_name_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginOrPadding16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/marginOrPadding16dp"
                android:background="@drawable/shape_edittext_bg"
                android:hint="@string/add_workout_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:padding="@dimen/editext_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_hint" />

            <TextView
                android:id="@+id/tv_description_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginOrPadding16dp"
                android:layout_marginTop="@dimen/marginOrPadding16dp"
                android:layout_marginEnd="@dimen/marginOrPadding16dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name_dialog" />

            <EditText
                android:id="@+id/et_description_dialog"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/marginOrPadding16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/marginOrPadding16dp"
                android:background="@drawable/shape_edittext_bg"
                android:hint="@string/add_workout_description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:padding="@dimen/editext_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_hint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_dialog"
                style="@style/Theme.Treinos.ButtonDialogStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginOrPadding16dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_save_dialog"
                app:layout_constraintTop_toBottomOf="@id/et_description_dialog" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_dialog"
                style="@style/Theme.Treinos.ButtonDialogStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginOrPadding16dp"
                android:layout_marginEnd="@dimen/marginOrPadding16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description_dialog"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>